# protein-bot

./: .env.example  .gitignore  CLAUDE.md  journal.md  pyproject.toml  railway.toml
docs/: architecture.md  deploy.md  failure_modes.md  learnings.md  policy.md  problem.md  scenarios.md  user_stories.md
examples/: README.md  __init__.py
examples/inspiration_bot/: README.md  __init__.py  agent.py  app.py  bot.py  cron.py  ingest.py  jobs.py  store.py
examples/inspiration_bot/docs/: architecture.md  failure_modes.md  policy.md  problem.md  scenarios.md  user_stories.md
examples/inspiration_bot/migrations/: 001_init.sql
migrations/: 001_proteinbot.sql  002_proteinbot_menopause.sql  003_proteinbot_timezone.sql  004_proteinbot_authorized.sql  005_proteinbot_reminder_status.sql
scripts/tests/: test_inspiration_bot.py
src/agent/: config.py  logging_setup.py
src/agent/agents/proteinbot/: bot.py  correction_handler.py  daily_tracker.py  food_analyzer.py  goal_calculator.py  ingredient_calculator.py  intent_classifier.py  meal_logger.py  models.py  recipe_store.py  suggestion_engine.py
